--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -854,9 +854,13 @@ h3 {
 }
 
 .loader-wrap {
-  display: grid;
-  place-items: center;
-  padding: 0.75rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  padding: 0;
 }
 
 .pl {
