--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -383,6 +383,109 @@ li.dropdown-list-item {
   fill: var(--text-active);
 }
 
+/* Dashboard card right-click menu */
+.contextMenu {
+  --menu-border: rgba(0, 0, 0, 0.08);
+  --menu-bg: linear-gradient(
+    45deg,
+    rgba(255, 255, 255, 0.45) 0%,
+    rgba(255, 255, 255, 0.85) 100%
+  );
+  --item-border: rgba(0, 0, 0, 0.1);
+  --item-color: rgb(10, 20, 28);
+  --item-bg-hover: rgba(10, 20, 28, 0.09);
+
+  overflow: visible;
+  background: var(--menu-bg);
+  backdrop-filter: blur(5px);
+  position: fixed;
+  top: var(--top);
+  left: var(--left);
+  animation: contextMenuAnimation 0.22s 0s both;
+  transform-origin: top left;
+  list-style: none;
+  margin: 4px;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  z-index: 9999;
+  min-width: 200px;
+  border-radius: 8px;
+  box-shadow:
+    0 0 0 1px var(--menu-border),
+    0 2px 2px rgb(0 0 0 / 3%),
+    0 4px 4px rgb(0 0 0 / 4%),
+    0 10px 8px rgb(0 0 0 / 5%),
+    0 15px 15px rgb(0 0 0 / 6%),
+    0 30px 30px rgb(0 0 0 / 7%),
+    0 70px 65px rgb(0 0 0 / 9%);
+}
+
+.contextMenu-item {
+  padding: 4px;
+}
+
+.contextMenu-item[data-divider="top"] {
+  border-top: 1px solid var(--item-border);
+}
+
+.contextMenu-item[data-divider="bottom"] {
+  border-bottom: 1px solid var(--item-border);
+}
+
+.contextMenu-item[data-divider="top-bottom"] {
+  border-top: 1px solid var(--item-border);
+  border-bottom: 1px solid var(--item-border);
+}
+
+.contextMenu-button {
+  color: var(--item-color);
+  background: transparent;
+  border: 0;
+  white-space: nowrap;
+  border-radius: 4px;
+  padding: 6px 24px 6px 7px;
+  text-align: left;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  width: 100%;
+  animation: contextMenuItemAnimation 0.18s 0s both;
+  font-family: var(--font-inter), "Inter", sans-serif;
+  cursor: pointer;
+}
+
+.contextMenu-button:hover {
+  background-color: var(--item-bg-hover);
+}
+
+.contextMenu-button:disabled {
+  opacity: 0.45;
+  cursor: not-allowed;
+}
+
+@keyframes contextMenuAnimation {
+  0% {
+    opacity: 0;
+    transform: scale(0.7);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes contextMenuItemAnimation {
+  0% {
+    opacity: 0;
+    transform: translateX(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 .panel-title {
   font-size: 1.28rem;
   font-weight: 600;
